--- a/INSTALL
+++ b/INSTALL
@@ -1,16 +1,38 @@
-Building SECI 
+## Building on Ubuntu / Debian
 
-Use the autogen script to prepare the build environment.
+### Install Dependencies
 
+    sudo apt-get update
+    sudo apt-get upgrade //Optional
+    sudo apt-get install build-essential
+    sudo apt-get install libtool autotools-dev autoconf automake
+    sudo apt-get install libssl-dev libevent-dev
+    sudo apt-get install libboost-all-dev
+    sudo apt-get install pkg-config
+    sudo add-apt-repository ppa:bitcoin/bitcoin
+    sudo apt-get update
+    sudo apt-get install libdb4.8-dev
+    sudo apt-get install libdb4.8++-dev
+    sudo apt-get install libminiupnpc-dev
+    sudo apt-get install libqt4-dev libprotobuf-dev protobuf-compiler //Optional, but required to build GUI Wallet
+    sudo apt-get install libqt5gui5 libqt5core5a libqt5dbus5 qttools5-dev qttools5-dev-tools libprotobuf-dev //Optional, but required to build GUI Wallet
+    sudo apt-get install libqrencode-dev //Optional
+
+### Clone the Repo and Build Seci
+
+    git clone https://github.com/seci-coin/seci
+    cd seci
     ./autogen.sh
     ./configure
     make
 
-Precompiled binaries are available at github, see
-https://github.com/seci/seci/releases
+__________________________________________________________________________
+
+## Precompiled binaries
+Available here: https://github.com/Seci-Coin/Seci/releases
 
 Always verify the signatures and checksums.
 
-See doc/build-*.md for instructions on building seci-qt,
+See /doc/build-*.md for instructions on building seci-qt,
 the intended-for-services, no-graphical-interface, reference
 implementation of SECI.
